# StatsPAI

./: .codespellrc  .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  MANIFEST.in  MIGRATION.md  README.md  README_CN.md  SECURITY.md  SUPPORT.md  StatsPAI_JOSS_draft_for_Scott.docx  mkdocs.yml  paper.bib  paper.md  pyproject.toml  test_results_full_suite.md
.coverage_campaign/: CAMPAIGN.md
.examples_campaign/: CAMPAIGN.md  worklist.md
.github/: dependabot.yml
.github/workflows/: benchmarks.yml  build-wheels.yml  ci-cd.yml  citation-audit.yml  docs.yml  parity-guards.yml  r-parity.yml  recommend-benchmark.yml  retraction-sweep.yml
.tier_eg_campaign/: CAMPAIGN.md  FINDING_cs_nevertreated_no_control.md
.tierd_campaign/: CAMPAIGN.md  worklist.md
Paper-AgentBench/code/: .gitignore  README.md  pyproject.toml  references.md
Paper-AgentBench/code/causalagentbench/: __init__.py  cli.py  conditions.py  metrics.py  runner.py  schema.py  scoring.py  stats.py  tasks.py
Paper-AgentBench/code/causalagentbench/adapters/: __init__.py  base.py  llm.py  statspai_oracle.py
Paper-AgentBench/code/examples/: quickstart.py
Paper-AgentBench/code/tests/: test_smoke.py
StatsPAI_full_data_analysis_skill/: EVALS.md  README.md  SKILL.md  validate_api_claims.py
StatsPAI_skill/: README.md  SKILL.md
benchmarks/: README.md  RESULTS.md  _utils.py  baseline.json  bench_did.py  bench_hdfe.py  bench_hdfe_scaled.py  bench_regression.py  results.json  run_all.py
benchmarks/cross_library/: README.md  RESULTS.md  hdfe_benchmark.py  results_arm64.json
benchmarks/hdfe/: .gitignore  AUDIT.md  BASELINE.md  PHASE1_VERIFY.md  PHASE2_VERIFY.md  PHASE3_VERIFY.md  PHASE4_VERIFY.md  PHASE5_VERIFY.md  PHASE6_VERIFY.md  PHASE7_VERIFY.md  PHASE8_VERIFY.md  README.md  SUMMARY.md  baseline.json  datasets.py  feols_bench.json  run_baseline.py  run_feols_bench.py  (+6 more)
docs/: ROADMAP.md  agent_cards_spec.md  analysis-ml-causal-inference.md  getting-started.md  index.md  joss_reviewer_qa.md  joss_validation_dossier.md  jss_source_audit_dossier.md  parity.md  stats.md
examples/: README.md  dml_card.py  nhefs_whatif.py
papers/: StasPAI-paper-axiv.md  data_card1995.csv  data_lalonde.csv  data_nsw_dw.csv  data_nsw_experimental.csv  paper.bib  run_experiments.py  run_real_data_replication.py  run_replication.py  statspai-paper-arxiv.md
plans/: 2026-04-15-sp-01-s1.1-spatial-core.md  2026-06-04-comprehensive-improvement-roadmap.md  2026-06-16-statspai-parity-performance-worklog.md  2026-07-22-rebel-canal-gaps-1week.md
rust/: README.md
schemas/: agent_cards.json  functions.json  index.json  tools.json
scripts/: agent_card_coverage_floor.json  agent_workflow_spec_audit.py  benchmark_ratchet.py  build_parity_index.py  check_example_execution.py  error_taxonomy_audit.py  failure_mode_audit.py  generate_stub.py  quality_gate.py  registry_stats.py  result_protocol_audit.py  se_menu_matrix.py  se_menu_matrix_baseline.json  section3_contract_audit.py  signature_house_style.py  signature_house_style_baseline.json  stability_audit.py  sync_agent_blocks.py  tierd_classify.py
specs/: 2026-04-15-sp-01-spatial-full-stack-design.md  2026-04-15-statspai-ecosystem-gap-analysis.md
test-notebooks/: chinese-fonts-guide.md  demo_causal_inference.ipynb
tests/: conftest.py  test_actionable_errors.py  test_aer_style.py  test_aer_word_style.py  test_aft.py  test_agent.py  test_agent_bench_mock.py  test_agent_blocks_drift.py  test_agent_card_coverage.py  test_agent_detail_levels.py  test_agent_docs.py  test_agent_result_methods.py  test_agent_schema.py  test_agent_workflow_spec_audit.py  test_aggte.py  test_aliases.py  test_api_stable_evidence.py  test_api_surface_consistency.py  test_arima.py  test_article_aliases.py  test_article_aliases_round2.py  test_audit.py  test_audit_bib_coverage.py  test_audit_bib_duplicates.py  test_audit_citations.py  test_audit_observational_treatment.py  test_audit_retractions.py  test_auto_cate.py  test_auto_cate_tuned.py  test_auto_cjk_fallback.py  test_auto_diagnostics.py  test_auto_estimators.py  test_auto_spec_type_resolution.py  test_auto_tools.py  test_bartik.py  test_bayes_advi.py  test_bayes_did.py  test_bayes_did_cohort.py  test_bayes_did_validation.py  test_bayes_dml.py  (+568 more)
tools/: audit_bib_coverage.py  audit_bib_duplicates.py  audit_citations.py  suggest_bibkey_backfills.py
(+1621 files in other folders)
