[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "StatsPAI"
version = "0.8.0"
description = "The Agent-Native Causal Inference & Econometrics Toolkit for Python"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bryce Wang", email = "bryce@copaper.ai"}
]
maintainers = [
    {name = "Bryce Wang", email = "bryce@copaper.ai"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
keywords = [
    "econometrics", "statistics", "causal-inference",
    "difference-in-differences", "regression-discontinuity",
    "synthetic-control", "matching", "propensity-score",
    "instrumental-variables", "panel-data", "double-ml",
    "stata", "R", "machine-learning",
    "tmle", "dragonnet", "causal-discovery", "policy-learning",
    "conformal-inference", "bayesian-causal-forest",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "statsmodels>=0.13.0",
    "linearmodels>=4.25",
    "numba>=0.56.0",
    "scikit-learn>=1.0.0",
    "patsy>=0.5.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
    "python-docx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]
performance = [
    "jax[cpu]>=0.4.0",
    "jaxlib>=0.4.0",
]
deepiv = [
    "torch>=2.0.0",
]
neural = [
    "torch>=2.0.0",
]
fixest = [
    "pyfixest>=0.25.0",
]
plotting = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/brycewang-stanford/statspai"
Documentation = "https://github.com/brycewang-stanford/statspai#quick-example"
Repository = "https://github.com/brycewang-stanford/statspai"
"Bug Reports" = "https://github.com/brycewang-stanford/statspai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=statspai --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
